--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=t20news.com
 APP_ENV=local
 APP_KEY=base64:GhmF6ExRU8iuLHjNS23s3JVPYsOFzspENddCJlGE+jE=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/DuAnTotNghiep/public/
 
 LOG_CHANNEL=stack
 
@@ -26,7 +26,7 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=hnthien1234@gmail.com
+MAIL_USERNAME=t20news.com@gmail.com
 MAIL_PASSWORD=thien123
 MAIL_ENCRYPTION=tls
 
