--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=t20news.com
+APP_NAME=t20news.xyz
 APP_ENV=local
 APP_KEY=base64:GhmF6ExRU8iuLHjNS23s3JVPYsOFzspENddCJlGE+jE=
 APP_DEBUG=true
