--- a/.env
+++ b/.env
@@ -27,8 +27,9 @@ MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=t20news.com@gmail.com
-MAIL_PASSWORD=thien123
+MAIL_PASSWORD=hotihzzxkqmxlwfn
 MAIL_ENCRYPTION=tls
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
