--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=t20news.xyz
 APP_ENV=local
 APP_KEY=base64:GhmF6ExRU8iuLHjNS23s3JVPYsOFzspENddCJlGE+jE=
-APP_DEBUG=true
-APP_URL=http://localhost/DuAnTotNghiep/public/
+APP_DEBUG=false
+APP_URL=https://t20news.xyz/
 
 LOG_CHANNEL=stack
 
@@ -29,7 +29,6 @@ MAIL_PORT=587
 MAIL_USERNAME=t20news.com@gmail.com
 MAIL_PASSWORD=hotihzzxkqmxlwfn
 MAIL_ENCRYPTION=tls
-
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
