--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=t20news.xyz
 APP_ENV=local
 APP_KEY=base64:GhmF6ExRU8iuLHjNS23s3JVPYsOFzspENddCJlGE+jE=
 APP_DEBUG=false
-APP_URL=https://t20news.xyz/
+APP_URL=http://127.0.0.1:8000/
 
 LOG_CHANNEL=stack
 
